--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,37 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <!--header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header-->
+                    <header>templates/license.txt</header>
+                    <properties>
+                        <owner>Graylog, Inc.</owner>
+                        <project>Graylog</project>
+                        <url>https://www.graylog.com/</url>
+                        <year>2015</year>
+                    </properties>
+                    <excludes>
+                        <exclude>**/README*</exclude>
+                        <exclude>pom.xml</exclude>
+                        <exclude>**/agent.xml</exclude>
+                        <exclude>bin/**</exclude>
+                        <exclude>config/**</exclude>
+                        <exclude>src/test/resources/**</exclude>
+                        <exclude>src/main/resources/**</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
