Rework configuration validation and start some outputs.

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
 com.graylog.agent.config.constraints.IsOneOf.message="${validatedValue}" is not one of: ${validValues}
+com.graylog.agent.config.constraints.IsAccessible.message=${file} or ${dir} is not accessible (check if directory exists and permissions are correct)
