--- a/config/agent.conf.example
+++ b/config/agent.conf.example
@@ -1,17 +1,36 @@
 # Graylog Agent example configuration.
 
-# inputs {
-#   local-syslog {
-#     type = file
-#     path = /var/log/syslog
-#     interval = 1 hour
-#   }
-#   apache-access {
-#     type = file
-#     path = /var/log/apache2/access.log
-#   }
-#   test-log {
-#     type = file
-#     path = logs/file.log
-#   }
-# }
+inputs {
+  local-syslog {
+    type = "file"
+    path = "/var/log/syslog"
+    interval = "1 hour"
+  }
+  apache-access {
+    type = "file"
+    path = "/var/log/apache2/access.log"
+    outputs = "gelf-tcp,console"
+  }
+  test-log {
+    type = "file"
+    path = "logs/file.log"
+  }
+}
+
+outputs {
+  gelf-tcp {
+    type = "gelf"
+    protocol = "tcp"
+    host = "127.0.0.1"
+    port = 12201
+    client-queue-size = 512
+    client-connect-timeout = 5000
+    client-reconnect-delay = 1000
+    client-tcp-no-delay = true
+    client-send-buffer-size = 32768
+    inputs = "test-log"
+  }
+  console {
+    type = "stdout"
+  }
+}
