Expose TLS config options for gelfclient.
Using a SNAPSHOT for now until the next gelfclient release is done.

--- a/config/agent.conf.example
+++ b/config/agent.conf.example
@@ -24,6 +24,9 @@ outputs {
     protocol = "tcp"
     host = "127.0.0.1"
     port = 12201
+    client-tls = false
+    client-tls-cert-chain-file = "/path/to/cert-chain.pem"
+    client-tls-verify-cert = true
     client-queue-size = 512
     client-connect-timeout = 5000
     client-reconnect-delay = 1000
