Add metric service and configuration.

--- a/config/agent.conf.example
+++ b/config/agent.conf.example
@@ -2,6 +2,11 @@
 
 message-buffer-size = 128
 
+metrics {
+  enable-logging = false
+  log-duration = "60s"
+}
+
 inputs {
   local-syslog {
     type = "file"
