--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                     <execution>
                         <id>generate-rpm</id>
                         <goals>
-                            <goal>rpm</goal>
+                            <goal>attached-rpm</goal>
                         </goals>
                     </execution>
                 </executions>
