--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <artifactId>graylog-agent</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <description>The Graylog Agent</description>
+    <organization>
+        <name>Graylog, Inc.</name>
+        <url>https://www.graylog.com/</url>
+    </organization>
 
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -286,6 +290,8 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <version>${project.version}</version>
+                    <release>1</release>
                     <group>Application/Internet</group>
                     <prefixes>
                         <prefix>/usr</prefix>
