--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
 com.graylog.agent.config.constraints.IsOneOf.message="${validatedValue}" is not one of: ${validValues}
-com.graylog.agent.config.constraints.IsAccessible.message=${file} or ${dir} is not accessible (check if directory exists and permissions are correct)
+com.graylog.agent.config.constraints.IsAccessible.message=${theFile} or ${theDir} is not accessible (check if directory exists and permissions are correct)
