Make content splitter for file input configurable.
- Remove configure() method from ContentSplitter and just use
  constructor parameters.
- Remove now unused ContentSplitterConfiguration.
- Make ByteBufProcessors for NewlineChunkSplitter configurable to
  support LF and CRLF.
- Add custom ValidFileInputConfiguration annotation and validator.

--- a/config/agent.conf.example
+++ b/config/agent.conf.example
@@ -11,6 +11,7 @@ inputs {
   local-syslog {
     type = "file"
     path = "/var/log/syslog"
+    content-splitter = "newline"
   }
   apache-access {
     type = "file"
