--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,5 @@
 com.graylog.agent.config.constraints.IsOneOf.message="${validatedValue}" is not one of: ${validValues}
 com.graylog.agent.config.constraints.IsAccessible.message=${theFile} or ${theDir} is not accessible (check if directory exists and permissions are correct)
+com.graylog.agent.inputs.file.ValidFileInputConfiguration.message=The file input configuration is invalid
+com.graylog.agent.inputs.file.ValidFileInputConfiguration.invalidPattern.message=Invalid content splitter pattern: "${pattern}"
+com.graylog.agent.inputs.file.ValidFileInputConfiguration.missingPattern.message=Missing content splitter pattern.
