Include bat script in assembly and also create a .zip artifact.

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,7 @@
                 <targetPath>${project.build.directory}</targetPath>
                 <includes>
                     <include>*.sh</include>
+                    <include>*.bat</include>
                 </includes>
             </resource>
         </resources>
