--- a/config/agent.conf.example
+++ b/config/agent.conf.example
@@ -11,7 +11,7 @@ message-buffer-size = 128
 // to contain a single string without spaces which will be used for the id.
 // Defaults to "file:config/agent-id" if not specified.
 
-agent-id = "file:/path/to/agent-id"
+agent-id = "file:config/agent-id"
 
 metrics {
   enable-logging = false
