--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,7 @@
 com.graylog.agent.config.constraints.IsOneOf.message="${validatedValue}" is not one of: ${validValues}
 com.graylog.agent.config.constraints.IsAccessible.message=${theFile} or ${theDir} is not accessible (check if directory exists and permissions are correct)
 com.graylog.agent.inputs.file.ValidFileInputConfiguration.message=The file input configuration is invalid
-com.graylog.agent.inputs.file.ValidFileInputConfiguration.invalidPattern.message=Invalid content splitter pattern: "${pattern}"
+com.graylog.agent.inputs.file.ValidFileInputConfiguration.invalidPattern.message=Invalid content splitter pattern: "${value}"
 com.graylog.agent.inputs.file.ValidFileInputConfiguration.missingPattern.message=Missing content splitter pattern.
+com.graylog.agent.inputs.file.ValidFileInputConfiguration.unsupportedCharset.message=Character set not supported: "${value}"
+com.graylog.agent.inputs.file.ValidFileInputConfiguration.illegalCharset.message=Invalid character set value: "${value}"
