--- a/pom.xml
+++ b/pom.xml
@@ -254,23 +254,15 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
-                    <!--header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header-->
-                    <header>templates/license.txt</header>
+                    <header>com/mycila/maven/plugin/license/templates/GPL-3.txt</header>
                     <properties>
                         <owner>Graylog, Inc.</owner>
-                        <project>Graylog</project>
-                        <url>https://www.graylog.com/</url>
-                        <year>2015</year>
+                        <project.name>Graylog</project.name>
                     </properties>
-                    <excludes>
-                        <exclude>**/README*</exclude>
-                        <exclude>pom.xml</exclude>
-                        <exclude>**/agent.xml</exclude>
-                        <exclude>bin/**</exclude>
-                        <exclude>config/**</exclude>
-                        <exclude>src/test/resources/**</exclude>
-                        <exclude>src/main/resources/**</exclude>
-                    </excludes>
+                    <includes>
+                        <include>**/src/main/java/**</include>
+                        <include>**/src/test/java/**</include>
+                    </includes>
                 </configuration>
                 <executions>
                     <execution>
