--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <useIncrementalCompilation>false</useIncrementalCompilation>
                     <annotationProcessors>
                         <annotationProcessor>com.google.auto.value.processor.AutoValueProcessor</annotationProcessor>
                     </annotationProcessors>
