--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,14 @@ notifications:
     on_success: change
     on_failure: always
     rooms:
-      secure: |-
-        g6Gpj2n1Bl6hIwWlywEkw8wRjpN2XuFsxFr9KQu/p7mRLYPdF3V5qQPVLBRd
-        KvkjCIM7gZy2DTRNUooQPXdJB3npbnlbQn4jNWqA7/fp434Sw5sdfSUMawGr
-        XvemLvn0KxQxCO9GfN3wfmYxEWJwXO36Q29BnRWWgMQOXpFFD8A=
+      secure: Q6ixG4Lj/HWlLKuq3sDReLe0t6s8fgIcKFcbJwhgvRz0UbOpa+trbeW8x44+p4m6fz508Z62bmvvGM1lYYDrJ46lxAlmwjXUEaQA5pTwgxiHQUTWcUSc6W5XD+Qcs7CY6HSE1FVt5L/mxkpddo5blhBbM18o36lK6xur5C1kN4A=
 after_success:
   - mvn -DskipTests -B assembly:single
 deploy:
   provider: s3
-  access_key_id: AKIAIGYGO43W76PZMMVA
+  access_key_id: AKIAJBL3SCAJTENB5ZQA
   secret_access_key:
-    secure: cYHsMgnAI08sz9G1Qb7ku2HoTaSn/OBBmjBzyYswX0/Kvb2asQcEGZGOEfYNTGOwdN6DP7p3axi5o+FPw2MLGGpBVz3tAtwYWTbzJR8kCEuGwb8N6abpdkGIn4AfifQ+vbn8zJrIB6HfGGRpDM9QnEjJFtpJO+2SjODzbZzkymE=
+    secure: EY9WZbf/e1I7Ft3qfhBXMYpzn1CGOzCp1hjMQK8NsO8nJEYtT5V/RRsqsgBNr0bQF3FHxcidqRi4CoY0cS5c71pLff9lYa9Dkyi5oJ0W8/rzGMu69WNhNmUWrpwxs0IL91/st6L1/okoSSb0WXCPLRFG5t8/xKE1YY6XKC4DM9I=
   bucket: graylog2-builds
   region: eu-west-1
   skip_cleanup: true
