--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
                     </descriptors>
                     <appendAssemblyId>false</appendAssemblyId>
                     <outputDirectory>${project.build.directory}/assembly</outputDirectory>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
+                    <finalName>${project.artifactId}-${project.version}-${maven.build.timestamp}</finalName>
                 </configuration>
             </plugin>
             <plugin>
