Make chunk reader interval and initial buffer size configurable.

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -5,3 +5,5 @@ org.graylog.collector.inputs.file.ValidFileInputConfiguration.invalidPattern.mes
 org.graylog.collector.inputs.file.ValidFileInputConfiguration.missingPattern.message=Missing content splitter pattern.
 org.graylog.collector.inputs.file.ValidFileInputConfiguration.unsupportedCharset.message=Character set not supported: "${value}"
 org.graylog.collector.inputs.file.ValidFileInputConfiguration.illegalCharset.message=Invalid character set value: "${value}"
+org.graylog.collector.inputs.file.ValidFileInputConfiguration.readerBufferSizeTooSmall.message=Reader buffer size too small: "${value}"
+org.graylog.collector.inputs.file.ValidFileInputConfiguration.readerIntervalTooSmall.message=Reader interval too small: "${value}"
