Disable strict javadoc for JDK 1.8

--- a/pom.xml
+++ b/pom.xml
@@ -470,6 +470,15 @@
     </build>
     <profiles>
         <profile>
+            <id>java8-disable-strict-javadoc</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <properties>
+                <additionalparam>-Xdoclint:none</additionalparam>
+            </properties>
+        </profile>
+        <profile>
             <id>release</id>
             <build>
                 <plugins>
